tests/__snapshots__/validation-target-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'target' option must be a list.

  1 | {
  2 |   "target": "latest",
    |             ~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.test.*"
  5 |   ]

      at ./tstyche.config.json:2:13

